# loa

./: AUTHORS  INSTALL  Makefile.am  Makefile.in  README.md  configure  configure.in
loa/: Makefile.am  Makefile.in  README  back.c  back.h  commands.txt  game.c  gamebase.c  gamebase.h  loa.c  loa.h  matrix.c  matrix.h  modula.h  olib.c  olib.h  rules.txt  tkloa.tcl.in
xloa/: Board.pm  CBox.pm  COPYING.txt  CUSTOMIZATION.txt  Debug.pm  EStone.pm  Edit.pm  Help.pm  Init.pm  MBox.pm  MList.pm  Makefile.am  Makefile.in  Menus.pm  Packer.pm  README  Save.pm  Stone.pm  rules.txt  using.txt  xloa.pl.in
